--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "appwrite": "^21.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.29.2",
     "lucide-react": "^0.562.0",
     "mapbox-gl": "^3.18.1",
     "react": "^19.2.0",
